add_library(mjs_lib STATIC
    mjs/array_object.cpp
    mjs/array_object.h
    mjs/char_conversions.cpp
    mjs/char_conversions.h
    mjs/date_object.cpp
    mjs/date_object.h
    mjs/error_object.cpp
    mjs/error_object.h
    mjs/function_object.cpp
    mjs/function_object.h
    mjs/gc_function.h
    mjs/gc_heap.cpp
    mjs/gc_heap.h
    mjs/gc_vector.h
    mjs/global_object.cpp
    mjs/global_object.h
    mjs/interpreter.cpp
    mjs/interpreter.h
    mjs/lexer.cpp
    mjs/lexer.h
    mjs/native_object.cpp
    mjs/native_object.h
    mjs/number_object.cpp
    mjs/number_object.h
    mjs/number_to_string.cpp
    mjs/number_to_string.h
    mjs/object.cpp
    mjs/object.h
    mjs/parser.cpp
    mjs/parser.h
    mjs/platform.cpp
    mjs/platform.h
    mjs/printer.cpp
    mjs/printer.h
    mjs/property_attribute.h
    mjs/regexp_object.cpp
    mjs/regexp_object.h
    mjs/string.cpp
    mjs/string.h
    mjs/string_object.cpp
    mjs/string_object.h
    mjs/unicode_data.h
    mjs/value.cpp
    mjs/value.h
    mjs/value_representation.cpp
    mjs/value_representation.h
    mjs/version.cpp
    mjs/version.h
    )
target_include_directories(mjs_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(mjs mjs.cpp)
target_link_libraries(mjs mjs_lib)
